--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-	<%= render :partial => 'courses/course_list' %>
+	<%= show_course_list %>
 <% end %>
 
 <%= error_messages_for :assignment, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
