--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-	<%= render :partial => 'course_list' %>
+		<%= show_course_list %>
 <% end %>
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
