--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -10,7 +10,11 @@
   <%= stylesheet_link_tag 'forms' %>
   <%= stylesheet_link_tag 'tables' %>
   <%= javascript_include_tag :defaults %>
+
+
   <%= calendar_date_select_includes %>
+  <%#= stylesheet_link_tag 'wice_grid' %>
+  
 </head>
 <body>
 
