--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -13,7 +13,7 @@
 
 
   <%= calendar_date_select_includes %>
-  <%#= stylesheet_link_tag 'wice_grid' %>
+  <%= stylesheet_link_tag 'wice_grid' %>
   
 </head>
 <body>
