--- a/app/views/gradations/index.html.erb
+++ b/app/views/gradations/index.html.erb
@@ -2,14 +2,14 @@
 	<%= show_course_list %>
 <% end %>
 
-
-<div id='details' class='course_list'>
+<div id='details'>
 	<table class='master'>
 		<thead>
-			<th>Enrolled Students</th>
+			<th>Student Name</th>
+			<th>Assignments ...</th>
 		</thead>
 		<tbody>
-				<tr class='help'><td><--&nbsp; Choose a course from the list at the left</td></tr>
+				<tr class='help'><td colspan='3'><--&nbsp; Choose a course from the list at the left</td></tr>
 		</tbody>
 	</table>
 </div>
