--- a/app/views/gradations/show.html.erb
+++ b/app/views/gradations/show.html.erb
@@ -2,17 +2,12 @@
 	<%= show_course_list %>
 <% end %>
 
-<script type="text/javascript">
-	new Ajax.InPlaceEditor('editme', '/demoajaxreturn.html');
-</script>
-
-
 <form id='grade_grid'>
-<table lass='sortable editable'>
+<table lass='sortable'>
 	<thead>
 		<tr>
-			<th width='150' class='noedit'>Student<br />Name</th>
-			<th width='10' class='noedit'>%</th>
+			<th width='150'>Student<br />Name</th>
+			<th width='50'>%</th>
 		<% for assignment in @gradation.assignments %>
 			<th width='50' class='grade' id='<%= assignment.id %>'>
 				<%= h assignment.name %><br />
@@ -28,11 +23,15 @@
 		<% for student in @gradation.students %>
 			<tr class="calc <%= cycle('odd', 'even') %>"  id='<%= student.id %>' />
 				<%= content_tag :td, student.full_name, :id => student.id %>
-				<td class='avg'>0.0</td>
+				<td class='score'>0.0</td>
 
 				<% for assignment in @gradation.assignments %>
-					<td class='relevant'>
-						<%= text_field 'score', assignment.gradations[counter].points_earned, :size => '10' if assignment.gradations[0]%>
+					<td class='grades'>
+						<%= text_field 'score', assignment.gradations[counter].points_earned, 
+								:points => assignment.possible_points,
+								:name => 'grade', 
+								:value => '10', 
+								:size => '10' if assignment.gradations[0]%>
 					</td>
 				<% end %>
 				<td></td>
@@ -57,35 +56,45 @@ function calculate() {
 }
 
 function calcRowAverage(row) {
-  var avgcell;
-  var cells;
+  var totalscore;
+  var grades;
   var total;
   var count;
-  var val;
+  var score;
+  var points;
 
   // Make sure this row has a place to put the average
-  avgcell = row.select('td.avg')[0];
-  if (avgcell) {
-    // It does, get the relevant cells
-    cells = row.select('td.relevant');
+  totalscore = row.select('td.score')[0];
+  if (totalscore) {
+    // It does, get the relevant grades
+    grades = row.select('input[name^=grade]');
 
-    // Get the average, allowing for empty/non-numeric cells
-    total = 0;
-    count = 0;
-    cells.each(function(cell){
-    	val = cell.innerHTML
-//      val = parseInt(cell.innerHTML);
-//      if (!isNaN(val)) {
-//          total += val;
-//          ++count;
-//      }
+    // Compute the score, allowing for empty/non-numeric cells
+    total = 0.0;
+    count = 0.0;
+    grades.each(function(grade) {
+    	// Get the data from the 'grade' element
+    	score		= parseFloat(grade.getValue());
+    	points	= parseFloat(grade.readAttribute('points'));
+    	
+    	// Make sure they didn't score more points than possible
+    	if (score > points) {
+    		alert ("You can't get more points than possible!'")
+    	} else {    	
+		  	// Total up the percentage
+		    if (!isNaN(score)) {
+		        total += score / points;
+		        ++count;
+		    }
+		  }
     });
 
     // Show the result
     if (count > 0) {
-      avgcell.update('' + (total / count));
+    	original = (total / count)*100
+      totalscore.update(Math.round(original*100)/100 + ' %');
     } else {
-      avgcell.update('n/a');
+      totalscore.update('n/a');
     }
   }
 }
