working on a CSS reset

--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,6 +1,6 @@
 <table id='courses' class='master'>
   <thead>
-    <th><%= link_to '+', new_course_path, :class => 'positive mini' %> Name
+    <th><%= link_to '+', new_course_path, :class => 'positive mini' if current_page?( :controller => :courses )%> Name
     	<%= "(#{@courses.length})" unless @courses.blank? %></th>
     <th>Term</th>
   </thead>
