--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
   <title>Gradesheet - <%= controller.controller_name.humanize %></title>
+  <%= stylesheet_link_tag 'reset' %>
   <%= stylesheet_link_tag 'layout' %>
   <%= stylesheet_link_tag 'menu' %>
   <%= stylesheet_link_tag 'forms' %>
