--- a/app/views/users/_user_list.html.erb
+++ b/app/views/users/_user_list.html.erb
@@ -2,7 +2,6 @@
 
 <table id="users" class="master">
   <thead>
-		<th></th>
     <th>ID</th>
     <% form_for users.class.to_s, :html => { :method => :get } do |s| %>
 	    <th>Name <%= text_field_tag :search, params[:search], :class => "search" %></th>
@@ -10,25 +9,26 @@
     <th>Email Address</th>
     <th>Campus</th>
 		<%= content_tag(:th, 'Class Of') if user_type == 'Student' %>
+		<th width='1'></th>
   </thead>
 	<tfoot>
-		<th></th>
     <th>ID</th>
     <th>Name</th>
     <th>Email Address</th>
     <th>Campus</th>
 		<%= content_tag(:th, 'Class Of') if user_type == 'Student' %>
+		<th width='1'></th>
 	</tfoot>
 
 	<tbody>
 		<% for u in users %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for(u)+'/edit' %>'" />
-				<td><%= button_to "X", u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?", :class => 'negative mini' %></td>
 				<%= content_tag :td, u.short_name %>
 				<td><%= link_to u.full_name, url_for(u)+'/edit' %></td>
 				<%= content_tag :td, u.email %>
 				<%= content_tag :td, u.site.name %>
 				<%= content_tag(:td, u.class_of) if user_type == 'Student' %>
+				<td><%= button_to 'Delete', u, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + u.full_name + "'?" %></td>
 			</tr>
 		<% end %>
   </tbody>
