--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,15 +1,15 @@
 <% content_for :left do %>
-		<%= show_course_list %>
+	<%= show_course_list %>
 <% end %>
 
 
 <div id='details' class='course_list'>
 	<table class='master'>
 		<thead>
-			<th>Enrolled Students</th>
+			<tr><th>Enrolled Students</th><tr>
 		</thead>
 		<tbody>
-				<tr class='help'><td><--&nbsp; Choose a course from the list at the left</td></tr>
+			<tr class='help'><td><--&nbsp; Choose a course from the list at the left</td></tr>
 		</tbody>
 	</table>
 </div>
