--- a/app/views/gradations/show.html.erb
+++ b/app/views/gradations/show.html.erb
@@ -110,5 +110,5 @@ function calcRowAverage(row) {
 
 <script type="text/javascript">
 	// Force a recalculation as soon as the HTML is loaded
-  //document.observe('dom:loaded', calculate());
+  document.observe('dom:loaded', calculate());
 </script>
