--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="box">
+<div class='box'>
 	<% form_for user do |f| %>
 			<div class="spacer">
 			<%= content_tag( :h1, "Editing: #{user.full_name}" ) %>
