--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -11,11 +11,11 @@
 				<%= f.hidden_field :course_id, :value => @course.id %>
 			</div>
 		
-			<label><span>Name</span>
+			<label><span class='required'>Name</span>
 				<%= f.text_field :name %>
 			</label>
 
-			<label><span>Possible Points</span>
+			<label><span class='required'>Possible Points</span>
 		    <%= f.text_field :possible_points %>
 			</label>
 		
