--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,33 +4,23 @@
 
 <%= error_messages_for :course, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<div>
-	<% form_for(@course) do |f| %>
-		<%= content_tag( :h1, "#{@course.name}" ) %>
+<div class='box'>
+	<% form_for( @course, :url => {}, :html => {:id => 'edit_course'} ) do |f| %>
+		<%#= content_tag( :h1, "#{@course.name}" ) %>
 
-		<label>Name</label>
 		<%= f.text_field :name %>
+		
+		<%#= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
 
-		<label>Type</label>
-		<%= collection_select :course, :course_type_id, CourseType.find(:all), :id, :name %>
-
-		<label>Teacher</label>
-		<%= collection_select :course, :teacher_id, Teacher.find(:all), :id, :full_name %>
-
-		<label>Term</label>
 		<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
 
-		<label>Grading Scale</label>
 		<%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
 
-		<label>Attributes</label>
-		<%= f.text_field :course_att_id %>
-	
-		<%= f.submit "Save" %>
-
 	<% end %>
+	<%= observe_form :edit_course, :url => {:action => :update} %>
 </div>
 
+<%= button_to 'Delete Course', @course, :confirm => 'Are you sure?', :method => :delete %>
 
 <div id='enrolled_students' class='main_form'>
 	<%= render :partial => 'enrolled_students' %>
@@ -38,7 +28,7 @@
 
 <div class='select_form'>
 	<form id='class_of_form'>
-		<%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of [year]'), ' '), 
+		<%= select_tag 'class_of', options_for_select(class_range.insert(0, 'Class Of ...'), ' '), 
 				:onchange => 
 					remote_function(
 						:update => 'student_list', 
@@ -46,8 +36,9 @@
 						:with => "'value=' + value + '||Class Of ' + value + '||C'",
 						:method => :get) %>
 	</form>
+
 	<form id='homeroom_form'>
-		<%= collection_select :homeroom, :name, @homerooms, :id, :name, {:include_blank => 'Home Room'}, {
+		<%#= collection_select :homeroom, :name, @homerooms, :id, :name, {:include_blank => 'Home Room'}, {
 				:onchange => 
 					remote_function(
 						:update => 'student_list', 
@@ -59,8 +50,4 @@
 	<div id='student_list'>	
 		<%= render :partial => 'student_list' %>
 	</div>
-	
-
 </div>
-
-
