--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -16,8 +16,9 @@
 		<% types.sort.each { |key, value| %>
 			<% object = value.to_s.camelize.singularize.constantize  %>
 			<% object_path = url_for object.new %>
-			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => object_path) ? ' current' : '') %>" />
-				<%= content_tag :td, link_to(key, object_path) , :onclick => "location.href='" + url_for(object_path) + "'" %>
+			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => object_path) ? ' current' : '') %>" 
+					onclick="location.href='<%= url_for(object_path) %>'"/>
+				<%= content_tag :td, link_to(key, object_path) %>
 				<td><%= button_to( 'Add', object_path + '/new', :method => :get ) if key != 'ALL'  %></td>
 			</tr>
 		<% } %>
