lots of little changes - WARNING the database schema has changed!
- Course_Type has been removed
- Inputing individual grades works but they are not being persisted to the DB yet

--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th><%= link_to 'New', new_assignment_path( :course_id => @course.id ), :class => 'positive mini' %>
-      Assignment Name</th>
+      Assignment Name <%= h '(' + @assignments.count.to_s + ')'%></th>
       <th>Possible points</th>
       <th>Due Date</th>
     </tr>
