--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -25,8 +25,9 @@
 
 <div id='header'>
 	<div class='login'>Welcome <a href='/login'>Kim Hurt</a></div>
-	<div class='tagline'>GradeSheet</div>
-	<img src='/images/rails.png' alt='Logo'/>
+	<div class='tagline'>Gradesheet</div>
+
+	<img src='/images/logo.png' alt='Logo' height='60' width='60'/>
 
 	<%= show_flash %>
 
