--- a/app/views/gradations/new.html.erb
+++ b/app/views/gradations/new.html.erb
@@ -1,26 +1,1 @@
-<h1>New gradation</h1>
-
-<%= error_messages_for :gradation %>
-
-<% form_for(@gradation) do |f| %>
-  <p>
-    <b>Student</b><br />
-    <%= f.text_field :student_id %>
-  </p>
-
-  <p>
-    <b>Assignment</b><br />
-    <%= f.text_field :assignment_id %>
-  </p>
-
-  <p>
-    <b>Points earned</b><br />
-    <%= f.text_field :points_earned %>
-  </p>
-
-  <p>
-    <%= f.submit "Create" %>
-  </p>
-<% end %>
-
-<%= link_to 'Back', gradations_path %>
+<h1>WE SHOULD NOT BE HERE</h1>
