--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :page_header do %>
+  <%= calendar_date_select_includes %>
+<% end %>
+
 <% content_for :left do %>
 	<%= show_course_list %>
 <% end %>
