--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -1,25 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
   <title>Gradesheet - <%= controller.controller_name.humanize %></title>
-  <%= stylesheet_link_tag 'reset' %>
-  <%= stylesheet_link_tag 'layout' %>
-  <%= stylesheet_link_tag 'menu' %>
-  <%= stylesheet_link_tag 'forms' %>
-  <%= stylesheet_link_tag 'tables' %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag 'reset' -%>
+  <%= stylesheet_link_tag 'layout' -%>
+  <%= stylesheet_link_tag 'menu' -%>
+  <%= stylesheet_link_tag 'forms' -%>
+  <%= stylesheet_link_tag 'tables' -%>
+  <%= javascript_include_tag :defaults -%>
 
-  <%#= javascript_include_tag 'tablekit' %>
+  <%#= javascript_include_tag 'tablekit' -%>
 
-  <%= calendar_date_select_includes %>
-
-  <script type="text/javascript">
-    <%= @content_for_page_scripts %>
-  </script>  
+  <%= @content_for_page_header -%>
 </head>
 
 <body>
