--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,13 +5,14 @@
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
   <title>Gradesheet - <%= controller.controller_name.humanize %></title>
-  <%= stylesheet_link_tag 'reset' -%>
+  <%#= stylesheet_link_tag 'reset' -%>
   <%= stylesheet_link_tag 'layout' -%>
+  <%= stylesheet_link_tag 'aal' -%>
   <%= stylesheet_link_tag 'menu' -%>
-  <%= stylesheet_link_tag 'forms' -%>
-  <%= stylesheet_link_tag 'tables' -%>
-  <%= javascript_include_tag :defaults -%>
+  <%#= stylesheet_link_tag 'forms' -%>
+  <%#= stylesheet_link_tag 'tables' -%>
 
+  <%= javascript_include_tag :defaults -%>
   <%#= javascript_include_tag 'tablekit' -%>
 
   <%= @content_for_page_header -%>
