--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,11 +5,13 @@
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
   <title>Gradesheet - <%= controller.controller_name.humanize %></title>
-  <%#= stylesheet_link_tag 'reset' -%>
+  <%= stylesheet_link_tag 'screen' -%>
+  <%= stylesheet_link_tag 'print', :media => 'print' -%>
+	<!--[if IE]><%= stylesheet_link_tag 'ie' -%><![endif]-->
+
   <%= stylesheet_link_tag 'layout' -%>
-  <%= stylesheet_link_tag 'aal' -%>
   <%= stylesheet_link_tag 'menu' -%>
-  <%#= stylesheet_link_tag 'forms' -%>
+  <%= stylesheet_link_tag 'forms' -%>
   <%#= stylesheet_link_tag 'tables' -%>
 
   <%= javascript_include_tag :defaults -%>
@@ -20,37 +22,34 @@
 
 <body>
 
-<div id='header'>
-	<div class='login'>Welcome <a href='/login'>Kim Hurt</a></div>
-	<div class='tagline'>Gradesheet</div>
+<div class='container showgri'>
+	<div id='header' class='span-20'>
 
-	<img src='/images/logo.png' alt='Logo' height='60' width='60'/>
+		<div class='span-3'><img class='top' src='/images/logo.png' width='60px' height='60px'></div>
+		
+		<div class='span-5'>
+			<span class='title last'>GradeSheet</span>
+			<span class='tagline column span-5'>Online grading at its best!</span>
+		</div>
+		
+		<div class='span-6 push-5 last'>
+			<span class='login'>Welcome <a href='/'>Kim Hurt </a></span>
+		</div>
+				
+		<div class='span-20 last'>
+			<%= menu_builder(request.path_parameters['controller'].split('/')[0]) %>
+		</div>
+	</div>
 
-	<%= show_flash %>
+	<div id='flash' class='span-24 last'><%= show_flash %></div>
 
-	<%= menu_builder(request.path_parameters['controller'].split('/')[0]) %>
-</div>
+	<div class='span-4 colborder'><%= yield :left  %></div>
+  <div class='span-15 last'><%= yield  %></div>
 
-
-<div class='colmask leftmenu'>
-<div class='colright'>
-<div class='col1wrap'>
-  <div class='col1'>
-    <%= yield  %>
-  </div>
-  </div>
-
-  <div class='col2'>
-    <%= yield :left  %>
-  </div>
-
-</div>
-</div>
-
-
-<div id='footer'>
+	<div class='span-20' id='footer'>
 		&copy; 2005 - 2009 <a href='http://www.kangaroobox.com'>KangarooBox</a>, LLC.  All rights reserved.
+	</div>
 </div>
+
 </body>
 </html>
-
